--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 *.ipch
 *.ipch
 *.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+/E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch
