--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea
 E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
 E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
 /E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch
+*.ipch
+/E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch
+/E. Sum of Three Values/.vs/E. Sum of Three Values/v17
+*.ipch
+*.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
