--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea
 *.ipch
 E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
 E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+*.ipch
+*.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
+E. Sum of Three Values/.vs/E. Sum of Three Values/v17/ipch/AutoPCH/fa57a4b6188ea6f/E. SUM OF THREE VALUES.ipch
